# coding-task-clonerobotics

./: Cargo.toml  README.MD
scripts/: create_socat.sh  permision.sh
src/: args.rs  errors.rs  logger.rs  main.rs
src/data_base/: data_base.rs  mod.rs
src/device/: command_parser.rs  device.rs  mod.rs
src/serial_port/: mod.rs  parser.rs  serial_port.rs
src/server/: http_server.rs  mod.rs
